# floralcraft

./: .gitattributes  Blocks.toml  Cargo.toml  Config.toml  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts  wesl.toml
.github/workflows/: deploy.yml
assets/: blocks.toml  config.toml
crates/aether/: Cargo.toml  README.md
crates/aether/src/: chunk.rs  core.rs  error.rs  lib.rs  storage.rs  subchunk.rs  world.rs
crates/aether/tests/: test.rs
crates/blueprint/: Cargo.toml  README.md
crates/blueprint/macros/: Cargo.toml
crates/blueprint/macros/src/: lib.rs
crates/blueprint/src/: lib.rs
crates/blueprint/tests/: input.toml  test.rs
crates/chroma/: Cargo.toml  README.md
crates/chroma/src/: lib.rs
crates/lattice/: Cargo.toml  README.md
crates/lattice/src/: block_generation.rs  lib.rs
crates/spico/: Cargo.toml  README.md
crates/spico/src/: lib.rs
crates/spico/tests/: test.rs
src/: Camera.ts  Renderer.ts  camera.rs  components.rs  config.rs  dictionary.rs  lib.rs  main.rs  main.ts  player.rs  position.rs  renderer.rs  styles.css
src/camera/: mod.rs
src/config/: mod.rs
src/core/: Camera.ts  Clock.ts  Config.ts  Input.ts  Renderer.ts
src/game/: mod.rs  physics.rs  player.rs
src/gpu/: BindGroupLayouts.ts  BindGroups.ts  Buffers.ts  PipelineLayouts.ts  Pipelines.ts  Resources.ts
src/player/: mod.rs
src/render/: BindGroupLayouts.ts  BindGroups.ts  Buffers.ts  PipelineLayouts.ts  Pipelines.ts
src/renderer/: chunks.rs  mod.rs
src/rendering/: assets.rs  isometric_projection.rs  mod.rs
src/shaders/: 06_present.wesl  compact.wesl  config.wesl  config.wgsl  gen.wesl  gen.wgsl  indirect.wesl  raycast.wgsl  raytrace.wesl  render.wesl  render.wgsl
src/shaders/core/: flags.wesl  mips.wesl  noise.wesl  pos.wesl
src/shaders/data/: Chunk.wgsl  World.wgsl  blocks.wesl  flags.wesl  pos.wesl
src/shaders/data/atomic/: Chunk.wgsl
src/shaders/data/chunk/: alloc.wesl  read_pool.wesl
src/shaders/data/map/: insert.wesl  lookup.wesl
src/shaders/data/read/: Chunk.wgsl  World.wgsl  chunk.wesl  svo_nodes.wesl  world.wesl
src/shaders/data/read-write/: Chunk.wgsl  World.wgsl
src/shaders/data/read_write/: chunk.wesl  svo_nodes.wesl  world.wesl
src/shaders/raycast/: conversions.wgsl  dda.wgsl  main.wgsl  pbr.wgsl
src/shaders/raytrace/: 05_renderer.wesl  conversions.wesl  dda.wesl  pbr.wesl  renderer.wesl  sky.wesl
src/shaders/raytrace/materials/: pbr.wesl  sky.wesl
src/shaders/raytrace/support/: dda.wesl  lookup.wesl
src/terrain/: block.rs  chunk.rs  mod.rs  position.rs  section.rs  subchunk.rs
src/terrain_management/: block_generator.rs  mod.rs  world_generator.rs
src/world/: block_dictionary.rs  block_generator.rs  chunk_generation.rs  chunk_loader.rs  chunk_selection.rs  dictionary.rs  hover_block.rs  interaction.rs  mod.rs
src/world_controller/: block_dictionary.rs  block_generator.rs  mod.rs  world.rs
