[package]
name = "floralcraft"
version.workspace = true
edition.workspace = true
license = "Proprietary"
publish = false

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }
bevy_camera = "0.18"
blueprint = { path = "crates/blueprint" }
spico = { path = "crates/spico" }
lattice = { path = "crates/lattice" }
aether = { path = "crates/aether", features = ["persistence"] }
toml = "1.0"
serde = "1.0"
bevy_async_task = "0.12"

[workspace]
resolver = "2"
members = [".", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/penguinawesome1/floralcraft"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
debug = 2
