[package]
name = "aether"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Voxel orchestration and chunk management for the Floralcraft engine."

[dependencies]
bincode = { version = "2.0", features = ["derive", "serde"], optional = true }
ahash = "0.8"
chroma = { path = "../chroma" }
dashmap = "6.1"
glam = "0.30"
itertools = "0.14"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"
tokio = { version = "1.50", features = [
    "fs",
    "io-util",
    "rt-multi-thread",
    "macros",
], optional = true }
paste = "1.0"
async-trait = { version = "0.1", optional = true }
spiral = "0.2"

[features]
persistence = ["dep:serde", "dep:bincode", "dep:tokio", "dep:async-trait"]
